--- a/buttons.html
+++ b/buttons.html
@@ -15,7 +15,17 @@
             border-radius: 4px;
             cursor:pointer;
             margin-right: 8px;
+            transition: opacity 0.15s;
         }
+
+        .subscribe-button:hover{
+            opacity:0.8;
+        }
+
+        .subscribe-button:active{
+            opacity:0.5;
+        }
+
         .join-button{
             background-color:white;
             border-color:rgb(41, 118, 211);
@@ -27,8 +37,21 @@
             border-radius: 2px;
             cursor: pointer;
             margin-right: 8px;
+            transition: background-color 0.15s,
+                color 0.15s;
 
         }
+
+        .join-button:hover{
+            background-color:rgb(12, 93, 192);
+            color:white;
+        }
+
+        .join-button:active{
+            opacity: 0.7;
+        }
+
+
         .tweet-button{
             background-color: rgb(2, 137, 255);
             color:white;
@@ -39,7 +62,12 @@
             font-weight: bold;
             font-size: 15px;
             cursor:pointer;
+            transition: box-shadow 0.15s;
             
+        }
+
+        .tweet-button:hover{
+            box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
         }
     </style>
 </head>
