--- a/buttons.html
+++ b/buttons.html
@@ -67,7 +67,8 @@
         }
 
         .tweet-button:hover{
-            box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
+            box-shadow: 5px 5px 10px rgba(0,0,0,0.15); /* 1°v to the right* | 2°v down | 3°v blur 
+                                                         || rgba (0,0,0,0 ) last value "transparency" */ 
         }
     </style>
 </head>
