v8 hover-transitions-shadows exercises oct 5th

--- a/tasks/lesson3/3a.html
+++ b/tasks/lesson3/3a.html
@@ -17,6 +17,9 @@
         .button-request:hover{
           opacity: 0.8;      
         }
+        .button-request:active{
+          opacity: 0.5;    
+        }
     </style>
 </head>
 <body>
