--- a/tasks/lesson3/3b.html
+++ b/tasks/lesson3/3b.html
@@ -18,7 +18,10 @@
         .button-add-to-cart:hover{
           background-color: rgb(199, 168, 14);      
         }
-    
+        .button-add-to-cart:active{
+          opacity: 0.5;
+    }
+        }
   </style>
 </head>
 <body>
