--- a/tasks/lesson3/3c.html
+++ b/tasks/lesson3/3c.html
@@ -16,10 +16,14 @@
       font-size: 15px;
       font-weight: bold;
       cursor: pointer;
-      transition: box-shadow 0.15s;
+      transition: box-shadow 0.15s,
+      opacity 0.15s;
     }
     .button-signup:hover{
           box-shadow: 5px 5px 10px rgba(0,0,0,0.15);      
+    }
+    .button-signup:active{
+      opacity: 0.5;
     }
   </style>
 </head>
