--- a/tasks/lesson3/3e.html
+++ b/tasks/lesson3/3e.html
@@ -17,7 +17,15 @@
       border-radius: 24px;
       margin-right: 10px;
       cursor:pointer;
+      transition: background-color 0.15s, opacity 0.15s;
+    }
 
+    .button-apply-on-company-website:hover{
+      background-color: rgb(25, 93, 160);
+    }
+
+    .button-apply-on-company-website:active{
+      opacity: 0.8;
     }
     .button-save{
       background-color: white;
@@ -30,7 +38,15 @@
       border-radius: 24px;
       border-style: solid;
       cursor:pointer;
+      transition: background-color 0.15s, border-width 0.15s, opacity;
+    }
 
+    .button-save:hover{
+      background-color: rgb(221, 217, 217);
+      border-width: 2px;
+    }
+    .button-save:active{
+      opacity:0.8;
     }
   </style>
 </head>
