--- a/tasks/lesson3/3d.html
+++ b/tasks/lesson3/3d.html
@@ -17,8 +17,15 @@
       font-size: 14px;
       font-weight: bold;
       cursor: pointer;
-
+      transition: background-color 0.15s
     }
+    .button-get-started:hover{
+      background-color: rgb(85, 59, 124);
+    }
+    .button-get-started:active{
+      opacity: 0.7;
+    }
+
     .button-download{
       background-color: white;
       color:rgb(108,117,125);
@@ -30,8 +37,16 @@
       font-size: 14px;
       font-weight: bold;
       cursor: pointer;
+      transition: background-color 0.15s,
+      color 0.25s, opacity;
+    }
 
-
+    .button-download:hover{
+      background-color: rgb(108,117,125);
+      color: white;
+    }
+    .button-download:active{
+      opacity: 0.7;
     }
   </style>
 </head>
