v9 devTools css box-model

--- a/tasks/lesson3/3f.html
+++ b/tasks/lesson3/3f.html
@@ -51,6 +51,16 @@
       border:none;
       margin-right: 10px;
       cursor: pointer;
+      transition: background-color 0.15s,
+      opacity 0.15s;
+    }
+
+    .button-buy-now:hover{
+      background-color: rgb(188, 120, 18);
+    }
+
+    .button-buy-now:active{
+      opacity:0.8;
     }
   </style>
 </head>
