--- a/buttons.html
+++ b/buttons.html
@@ -7,15 +7,18 @@
     <title>Lesson2</title>
     <style>
         .subscribe-button{
-            background-color: rgb(200, 0, 0);
+            background-color: #cc0000;
             color: white;
             border:none;
-            height: 36px;
-            width: 105px;
+            padding-top: 10px;
+            padding-right: 16px;
+            padding-bottom: 10px;
+            padding-left: 16px;
             border-radius: 4px;
             cursor:pointer;
-            margin-right: 8px;
+            margin-right: 12px;
             transition: opacity 0.15s;
+            vertical-align: top;
         }
 
         .subscribe-button:hover{
@@ -23,20 +26,25 @@
         }
 
         .subscribe-button:active{
+
             opacity:0.5;
         }
 
         .join-button{
+            font-family: Arial;
+            font-size: 14px;
             background-color:white;
             border-color:rgb(41, 118, 211);
             border-style: solid;
             border-width: 1px;
             color: rgb(41, 118, 211);
-            height: 36px;
-            width: 62px;
+            padding-top: 9px;
+            padding-right: 15px;
+            padding-bottom: 9px;
+            padding-left: 15px;
             border-radius: 2px;
             cursor: pointer;
-            margin-right: 8px;
+            margin-right: 12px;
             transition: background-color 0.15s,
                 color 0.15s;
 
@@ -53,22 +61,28 @@
 
 
         .tweet-button{
-            background-color: rgb(2, 137, 255);
+            background-color: #1d9bf0;
             color:white;
             border: none;
-            height: 36px;
-            width:70px;
-            border-radius: 18px;
+            padding-top: 7px;
+            padding-right: 16px;
+            padding-bottom: 7px;
+            padding-left: 16px;
+            border-radius: 50px;
             font-weight: bold;
             font-size: 15px;
             cursor:pointer;
-            transition: box-shadow 0.15s;
-            
+            transition: box-shadow 0.15s,
+            opacity 0.15s;
+            vertical-align: top;
         }
 
         .tweet-button:hover{
             box-shadow: 5px 5px 10px rgba(0,0,0,0.15); /* 1°v to the right* | 2°v down | 3°v blur 
                                                          || rgba (0,0,0,0 ) last value "transparency" */ 
+        }
+        .tweet-button:active{
+            opacity: 0.8;
         }
     </style>
 </head>
