--- a/tasks/lesson4/4k.html
+++ b/tasks/lesson4/4k.html
@@ -14,14 +14,18 @@
       padding-top: 7px;
       padding-right: 16px;
       padding-bottom: 7px;
+      margin-left: 10px;
       margin-right: 10px;
       font-weight: bold;
       font-size: 15px;
-      transition: padding 0.5s;
+      cursor: pointer;
+      transition: padding 0.5s, margin 0.5s;
     }
     button:hover{
       padding-left: 26px;
       padding-right: 26px;
+      margin-left: 0px;
+      margin-right:0px;
     }
 
   </style>
